# NTU-Dynamic-Strain-Tatva

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
Velocity-weakening/src/: environment_setup_workbench.ipynb  plot_contact_friction_map.py  plot_contact_mu_disp.py  render_stress_frames.py  velocity_weakening_3d_hpc_preset.ipynb  velocity_weakening_notebook_helpers.py  velocity_weakening_tatva.py  velocity_weakening_workbench.ipynb
example/: adhesion_lagrange_multipliers.py  advection_diffusion_surface.py  contact_3d.py  elastodynamics_3d.py  homogenization_periodic.py  nonlinear_hole_plate.py  velocity_weakening_2d.py
tatva/: legacy_velocity_weakening.py
tests/: test_legacy_velocity_weakening.py
